
  * util-core: Introduce an `AsyncMeter` for asynchronously rate limiting to a fixed rate over time.
    It can be used for smoothing out bursty traffic, or for slowing down access to a
    resource. ``RB_ID=756333``

  * util-core: Introduce a `TokenBucket` for helping to control the relative rates of two processes,
    or for smoothing out the rate of a single process. ``RB_ID=756333``

API Changes:

  * util-core: `Timer` now has final implementations for `schedule` which delegate
    to new protected `scheduleOnce` and `schedulePeriodically` methods. This is
    done to ensure that `Locals` are captured when the task is scheduled and
    then used when the task is run. Existing `Timer` implementations should rename
    their existing `schedule` methods to work with the new interface. ``RB_ID=755387``

  * util-core: Remove deprecated `FuturePool.defaultPool`, callers should
    use `FuturePool.unboundedPool` instead. ``RB_ID=757499``

  * util-stats: Remove deprecated methods on `com.twitter.finagle.stats.StatsReceiver`.
    ``RB_ID=757414``

  * util-core: `AsyncStream` graduates out of `com.twitter.concurrent.exp` into
    `com.twitter.concurrent`. Backwards compatibility aliases remain for Scala
    users, but Java users will need to update their imports. ``RB_ID=758061``

  * util-codec: Add a new encoder `com.twitter.util.Base64UrlSafeStringEncoder`
    which extends from `com.twitter.util.Base64StringEncoder`. Both the url-safe
    and non-url-safe encoders can decode all strings generated by either. ``RB_ID=765189``

  * util-core: Remove unnecessary `invalidate` method from util-cache's
    `com.twitter.cache.guava.LoadingFutureCache`, and change the `remove` semantic
    to match the `com.twitter.cache.FutureCache` contract. ``RB_ID=766988``

  * util-core: Remove protected `Timer.monitor` (overrides a monitor to use by a
    timer implementation) because any possible implementation rather than `Monitor.get`